--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,44 @@
 venv/
 .env
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+.Python
+
+
+
+# Django
+*.log
+*.pot
+*.pyc
+db.sqlite3
+media/
+
+# Environment variables
+.env
+*.env
+
+# Static files (generated)
+staticfiles/
+static/
+
+# IDEs
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Build artifacts
+build/
+dist/
+*.egg-info/
+pip-wheel-metadata/
+
+# Others
+*.swp
+*.swo
+
