--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
+# Virtual Environment
+env/
 venv/
-.env
-
 
 # Environment Variables
 .env
@@ -10,6 +10,9 @@ venv/
 # Python
 __pycache__/
 *.py[cod]
+*.pyc
+*.pyo
+*.pyd
 *$py.class
 *.so
 .Python
@@ -106,3 +109,9 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Accidental command files (PowerShell/Shell commands)
+-files*
+tatus*
+Select-String*
+ForEach-Object*
