--- a/.env.example
+++ b/.env.example
@@ -32,12 +32,29 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 
 # ============================================
+# Email Configuration
+# ============================================
+# For Gmail:
+# 1. Enable 2-factor authentication
+# 2. Generate App Password: https://myaccount.google.com/apppasswords
+# 3. Use the app password in EMAIL_HOST_PASSWORD
+
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=your_email@gmail.com
+EMAIL_HOST_PASSWORD=your_app_password
+DEFAULT_FROM_EMAIL=your_email@gmail.com
+
+# ============================================
 # Notes:
 # ============================================
 # 1. If you set a password for MySQL root user in XAMPP, update DB_PASSWORD above
 # 2. Database 'ascent_hrms' will be created automatically during migration
 # 3. To access phpMyAdmin: http://localhost/phpmyadmin
 # 4. Default XAMPP MySQL port is 3306
+# 5. For email: Configure EMAIL_HOST_USER and EMAIL_HOST_PASSWORD in .env file
 
 
 
